delegate to system class loader when parsing options